# WAM2layers

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yaml.md  Backtrack_savedaily_mat.py  CHANGELOG.md  CITATION.cff  Con_E_Recyc_Output_monthly_mat.py  Fluxes_and_States_mat.py  Hor_Fluxes_Output_mat.py  MANIFEST.in  Preprocess_ERA5.py  README.md  backtrack.py  download_script.sh  environment.yml  example_config.yaml  get_era5.py  get_modeldata.py  getconstants_pressure_ECEarth.py  getconstants_pressure_ERA5.py  preproc_analysis.ipynb  preproc_clean_dask.ipynb  preprocess_ecearth.py  preprocess_era5.py  preprocess_era5_modellevels.py  preprocessing.py  pyproject.toml  verify.py  visualization.py  watersnoodramp.yaml
.github/DISCUSSION_TEMPLATE/: Q&A.md  Q&A.yml  ideas  ideas.yml  q&a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: New Issue.yml  new-release.md  standard-issue-template.md
.github/workflows/: ci.yaml  publish.yaml
cases/: ec-earth.yaml  era5.yaml  era5_2013.yaml  era5_2021.yaml  era5_2021_global.yaml  example.yaml
configs/: README.md  opendap-config-eiffel.yaml  opendap-config-volta.yaml
docs/: conf.py  config.md  develop.md  example.md  howtouse.md  index.md  installation.md  preprocessing.md  quickstart.md  requirements.txt  theory.md  userguide.md
docs/_static/: WAM_logo_v3.png_Zone.Identifier
docs/source/: conf.py  custom.css  index.rst  intro.rst
docs/source/preprocessing/: ec_earth.ipynb  era5_ml.ipynb  era5_pl.ipynb  index.rst
docs/userguide/: analysis.md  config.md  index.md  input.md  installation.md  interactive.md  opendap.md  overview.md  preprocess.md  tracking.md  using.md
misc/: FlowChart GitHub.pptx  SMP.docx  horizontal_fluxes_illustration.pptx  logo_source.sketchpad  wamlogo.pptx
notebooks/: Comparison_fluxes_pressure_modellevels.ipynb  Comparison_q_pressure_modellevels.ipynb  README.md  Visualisation_Functions.py  make_moving_tagging_region.ipynb  make_soure_region.ipynb  make_tagging_region.ipynb  make_tagging_region_track.ipynb  make_testdata.ipynb  movie.ipynb  preprocess-icon-data-nextgems.ipynb  visualisation.ipynb  visualize_outputs.ipynb
sample_data/: README.txt  sample_config.yaml  source_region.nc
sample_data/input_data/: ERA5_2021-07-15_e.nc  ERA5_2021-07-15_ml_q.nc  ERA5_2021-07-15_ml_u.nc  ERA5_2021-07-15_ml_v.nc  ERA5_2021-07-15_sp.nc  ERA5_2021-07-15_tp.nc
sample_data/output_data/: 2021-07-15_s_track.nc
sample_data/preprocessed_data/: 2021-07-15_fluxes_storages.nc
scripts/: README.md  WAM2-Layers Source Region Designer.py  download_MPI_cmip_data.sh  download_era5_ml.py  download_era5_pl.py  make_source_region.py
src/wam2layers/: __init__.py  cli.py  config.py  download.py  download_preprocessed.py  example_cases.py  examples.py  fortrack.py  io.py  time.py
src/wam2layers/analysis/: Check_etrack.ipynb  checks.py  visualization.py
src/wam2layers/preprocessing/: acor.py  arco.py  backtrackecearth3.py  cli.py  cmip.py  ecearth.py  ecearth3.py  era5.py  input_validation.py  pressure_levels.py  shared.py  shared_change.py  tableERA5model_to_pressure.csv  utils.py  xarray_append.py
src/wam2layers/reference/: variables.py
src/wam2layers/tracking/: backtrack.py  core.py  forward.py  forwardtrack.py  grid.py  io.py  shared.py  vertical.ipynb
src/wam2layers/utils/: Visualisation_Functions.py  __init__.py  calendar.py  get_era5.py  grid.py  log.py  make_source_region.py  profiling.py  shapefile_mask.py  source_region.py  tagging_region.py
tests/: test_cli.py  test_config.py  test_config.yaml  test_download.py  test_grid.py  test_io.py  test_pressure.py  test_workflow.py
tests/preprocessing/: test_era5.py
tests/test_data/: README.md  config_rhine.yaml  config_rhine_pl.yaml  config_west_africa.yaml  prepare_test_data.py  region_lake_volta.nc  region_rhine.nc  source_region.nc  test_config.yaml
tests/test_data/era5/: ERA5_2022-08-31_e.nc  ERA5_2022-08-31_ml_q.nc  ERA5_2022-08-31_ml_u.nc  ERA5_2022-08-31_ml_v.nc  ERA5_2022-08-31_sp.nc  ERA5_2022-08-31_tp.nc  prepare_test_data.py
tests/test_data/era5_pl/: ERA5_2020-01-01_d2m.nc  ERA5_2020-01-01_e.nc  ERA5_2020-01-01_pl_q.nc  ERA5_2020-01-01_pl_u.nc  ERA5_2020-01-01_pl_v.nc  ERA5_2020-01-01_sp.nc  ERA5_2020-01-01_tcw.nc  ERA5_2020-01-01_tp.nc  ERA5_2020-01-01_u10.nc  ERA5_2020-01-01_v10.nc  prepare_test_data.py
tests/test_data/shape/: Rhine.dbf  Rhine.shp  Rhine.shx
tests/test_data/verify_output/: 2022-08-31_fluxes_storages.nc  backtrack_2022-08-31T18-00.nc  forwardtrack_1979-07-01T23-00.nc
tests/unit/: advection.py  check_advection.ipynb  test_frequency.py
wam2layers/: cli.py
wam2layers/analysis/: visualization.py
wam2layers/preprocessing/: checks.py  cli.py  era5.py  preprocess_ecearth.py  preprocess_era5.py  preprocess_era5_modellevels.py  tableERA5model_to_pressure.csv
wam2layers/tests/: test_data.py
wam2layers/tracking/: backtrack.py
(+2 files in other folders)
