[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wam2layers"
description = "Atmospheric moisture tracking model"
readme = "README.md"
dynamic = ["version"]
license = { text = "Apache 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
]
keywords = [
  "atmospheric rivers",
  "hydrological cycle",
  "meteorology",
  "moisture recycling",
  "moisture tracking",
]
requires-python = ">=3.9, <3.13"
dependencies = [
    "numpy",
    "pyyaml",
    "scipy",
    "pandas",
    "xarray",
    "netcdf4",
    "scipy",
    "click",
    "pydantic",
    "dask",
    "distributed",
    "psutil",
    "regionmask",
]

[project.optional-dependencies]
viz = [
    "matplotlib",
    "cmocean",
    "cartopy",
]
dev = [
    "black",
    "cffconvert",
    "isort",
    "myst-nb",
    "sphinx_rtd_theme",
    "sphinx",
    "myst-nb",
    "pytest",
    "pre-commit",
    "flake8",
    "build",
    "twine",
    "mypy",
]
complete = ["wam2layers[viz,dev]"]

[project.urls]
Documentation = "https://wam2layers.readthedocs.io/en/latest"
"Source code" = "https://github.com/WAM2layers/WAM2layers"

[project.scripts]
wam2layers = "wam2layers.cli:cli"

[tool.setuptools.package-data]
"wam2layers.preprocessing" = ["*.csv"]

[tool.setuptools.dynamic]
version = {attr = "wam2layers.__version__"}

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
